@@ -1,8 +1,0 @@
-# Begin /etc/lsb/lsb-config
-
-rcbase="/etc/init.d"
-statedir="/etc/lsb/state"
-distro="LFS"
-
-# End /etc/lsb/lsb-config
-
