@@ -12,6 +12,7 @@ ChangeLog
         * ifup - copy network configuration scritps to /run on startup
         * ifdown - use running configuration stored in /run to stop interfaces
         * Moved sysconfig files to /etc/default
+        * Removed unused /etc/lsb /lib/lsb/manage-functions
 
 20110424 - [dj]
         * Sync to LFS-Bootscripts-20110424 (move new run mounts and
